# technews

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: daily.yml
config/: settings.yaml  sources.yaml  theses.yaml
output/: dashboard.html  index.html  topic_history.json  topics.html
output/archive/: 2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
output/platform/: index.html
src/technews/: __init__.py  cli.py  cluster.py  editor.py  fetch.py  models.py  notify.py  pipeline.py  render.py  scoring.py  store.py  thesis.py  topics.py
templates/: dashboard.html.j2  digest.md.j2  email.html.j2  topics.html.j2
tests/: conftest.py  test_cluster.py  test_fetch.py  test_pipeline.py  test_scoring.py  test_thesis.py  test_topics.py
