[project]
name = "technews"
version = "0.1.0"
description = "Proactive Tech Politics news platform: surface, score, and track theses against primary + secondary sources."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "feedparser>=6.0",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
technews = "technews.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
